Fixed horizontal scroller to match widget factory.

--- a/assets/css/skin.styl
+++ b/assets/css/skin.styl
@@ -39,8 +39,8 @@
    -webkit-overflow-scrolling: touch
 
 .ui-page
-   background: url(/images/Background_PerforatedMetal@2x.png) 50% 0
-   background-size: 320px 480px
+   background: url(/images/Tilable-Background@2x.png) 50% 0
+   background-size: 50px 50px
 
 .footer
    .ui-navbar
@@ -121,6 +121,9 @@
    background-size: 4px 4px
    position: relative
    dropshadow: inset 0 10px 15px rgba(255,255,255, .4), inset 0 -10px 15px rgba(200,200,200,.4)
+
+   .ui-btn-active
+      dropshadow: inset 0 -10px 15px rgba(255,255,255, .4), inset 0 10px 15px rgba(200,200,200,.4)
 
 .fans
    .fan
